Fixed the issue with text bleeding out of the post container

--- a/src/components/Pages/forum.component/forum.component.css
+++ b/src/components/Pages/forum.component/forum.component.css
@@ -1,10 +1,11 @@
 #forum-rules {
   max-height: 40vh;
-  max-width: 80vw;
+  width: 80vw;
   background-image: url(../../../images/n.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   margin: auto;
+  min-width: 20vw;
 }
 
 #forum-rules-text {
@@ -15,6 +16,9 @@
   background: rgb(255, 255, 255, 0.9);
   padding: 2%;
   max-height: 40vh;
+  text-overflow: ellipsis;
+  white-space: wrap;
+  overflow: hidden;
 }
 
 #forum-proper {
@@ -33,6 +37,16 @@
 #forum-main {
   text-align: left;
   margin-top: 2%;
+  min-width: 20vw;
+}
+
+#forum-main-text {
+  margin-top: 1%;
+  font-family: "Titillium Web", sans-serif;
+  color: #006272;
+  text-overflow: ellipsis;
+  white-space: wrap;
+  overflow: hidden;
 }
 
 #forum-post-container {
